# real-time-crypto-dashboard

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
src/backend/: CryptocurrencyDataFetcher.py  FeatureStoreManager.py
src/utils/: dirs.py  logger.py
